# dynamic-matrix

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  cspell.config.yaml  entrypoint.py  pyproject.toml  tox.ini
.config/: dictionary.txt  requirements-test.in  requirements.in
.github/: dependabot.yml
.github/workflows/: release.yml  self-test.yml  tox.yml
src/dynamic_matrix/: __main__.py
tests/: test_action.py
